--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
   --gs-fontcolor-one: #f2f3f8;
   --gs-fontcolor-two: #121212;
   --gs-fontcolor-three: #9ca3af;
+  --gs-formgrey: #404040;
   --gs-bordercolor: rgb(41, 51, 62);
   --gs-border: 1px solid rgb(41, 51, 62);
   --font-type-one: Roboto, sans-serif;
