--- a/styles/SearchBarStack.module.css
+++ b/styles/SearchBarStack.module.css
@@ -6,6 +6,7 @@
   padding-top:5px;
   padding-bottom: 5px;
   display: flex;
+  justify-self: center;
   flex-direction: column;
   justify-content: center;
   height: 50px;
