--- a/styles/DetailStackPage.module.css
+++ b/styles/DetailStackPage.module.css
@@ -20,6 +20,24 @@
   padding: 10px;
   color: var(--gs-fontcolor-one);
 }
+.cover-image {
+  width: calc(100% - 40px);
+  height: 100px;
+  border-radius: 10px;
+  flex:0 0 auto;
+  margin: 20px;
+  overflow: hidden;
+  position: relative;
+}
+
+.cover-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 10%;
+  display: block;
+}
+
 .listofcard {
   display: flex;
   flex-direction: row;
