--- a/styles/TcgImage.module.css
+++ b/styles/TcgImage.module.css
@@ -126,11 +126,8 @@
 }
 
 .AdContainer {
-  position: fixed;
-  color: #fff;
-  background-color: var(--gs-color-primary-light);
-  top: 0;
-  height: 90px;
   width: 100%;
-  z-index: 9998;
+  margin: 10px 0;
+  display: block;
 }
+
