--- a/styles/TcgImage.module.css
+++ b/styles/TcgImage.module.css
@@ -126,8 +126,10 @@
 }
 
 .AdContainer {
-  width: 100%;
-  height: 150px; 
+  width: calc(100% - 2px);
+  border: 1px solid var(--gs-bordercolor);
+  border-radius: 20px;
+  height: 250px; 
   overflow: hidden;
   display: block;
   margin: 10px 0; 
