--- a/styles/PostingStackFunctions.module.css
+++ b/styles/PostingStackFunctions.module.css
@@ -23,14 +23,70 @@
   cursor: pointer;
   color: var(--gs-fontcolor-three);
   font-weight: 500;
+  font-size: 12px;
   transition: all 0.2s ease;
 }
 
-.format-btn{
-background-color: var(--gs-bgcolor-two);
-  border: 1px solid var(--gs-formgrey);
-    border-radius: 20px;
-  padding: 8px 16px;
-    color: var(--gs-fontcolor-three);
+.function-btn {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  background-color: var(--gs-bgcolor-one);
+  border-top: 1px solid var(--gs-formgrey);
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  width: 100%;
+  cursor: pointer;
+  color: var(--gs-fontcolor-three);
+  font-weight: 500;
+  font-size: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 15px;
+  transition: all 0.2s ease;
+}
 
+.function-menu-header{
+    display: flex;
+  align-items: center;
+  gap: 8px;
+  background-color: var(--gs-bgcolor-one);
+  border-top: 1px solid var(--gs-formgrey);
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  width: 100%;
+  cursor: pointer;
+  color: var(--gs-fontcolor-three);
+  font-weight: 800;
+  font-size: 20px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 15px;
+  transition: all 0.2s ease;
+}
+
+.function-btn:nth-last-child(1) {
+  border-bottom: 1px solid var(--gs-formgrey);
+}
+
+.format-btn {
+  background-color: var(--gs-bgcolor-two);
+  border: 1px solid var(--gs-formgrey);
+  padding: 6px;
+  color: var(--gs-fontcolor-three);
+  line-height: 0;
+}
+
+.functions-menu {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1003;
+  background-color: var(--gs-bgcolor-one);
+  width: 100%;
+  height: fit-content;
+  box-shadow: 0 -2px 16px rgba(0, 0, 0, 0.1);
 }
