--- a/styles/StacksPage.module.css
+++ b/styles/StacksPage.module.css
@@ -21,7 +21,8 @@
 
 .stacks-component-cover img {
   width: 100%;
-  height: 160px;
+  height: auto;
+  max-height: 180px;
   object-fit: cover;
   object-position: 0% 35%;
 }
