--- a/styles/DetailStackPage.module.css
+++ b/styles/DetailStackPage.module.css
@@ -24,7 +24,7 @@
   width: calc(100% - 40px);
   height: 100px;
   border-radius: 10px;
-  flex:0 0 auto;
+  flex: 0 0 auto;
   margin: 20px;
   overflow: hidden;
   position: relative;
@@ -86,9 +86,9 @@
   line-height: 1.2rem;
   color: var(--gs-fontcolor-one);
   padding-top: 13px;
-    padding-bottom: 13px;
-    padding-left: 20px;
-    padding-right: 20px;
+  padding-bottom: 13px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .detail-content h3 {
@@ -176,6 +176,10 @@
 .comment-holder-comment {
   font-weight: 400;
   font-size: 16px;
+  word-wrap: break-word;     
+  overflow-wrap: break-word; 
+  white-space: normal;  
+  word-break: break-word;  
 }
 
 .comment-holder-func {
@@ -325,18 +329,15 @@
 .emoji-picker {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 0.5rem;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   padding-top: 0.5rem;
   padding-bottom: 1rem;
 }
 
 .emoji-picker span {
-  cursor: pointer;
-  font-size: 1.5rem;
-  transition: transform 0.2s;
-}
-
-.emoji-picker span:hover {
-  transform: scale(1.2);
+  flex: 1 1 2rem; /* base size, but shrinks if needed */
+  text-align: center;
+  font-size: 1.2rem;
 }
