--- a/styles/DetailStackPage.module.css
+++ b/styles/DetailStackPage.module.css
@@ -22,10 +22,12 @@
 }
 .cover-image {
   width: calc(100% - 40px);
-  height: 100px;
+  height: 150px;
   border-radius: 10px;
   flex: 0 0 auto;
-  margin: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
   overflow: hidden;
   position: relative;
 }
@@ -145,6 +147,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: var(--gs-border);
 }
 
 .comment-dp {
