--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
   --gs-bgcolor-two: #121212;
   --gs-bgcolor-two-a: #1c1c1c;
   --gs-bgcolor-three: #26262d;
+    --gs-bgcolor-four: #1c1c24;
   --gs-fontcolor-one: #f2f3f8;
   --gs-fontcolor-two: #121212;
   --gs-fontcolor-three: #9ca3af;
